--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Estudo de algoritmos</title>
-</head>
-<body>
-  <h1>Estudo de algoritimos</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Estudo de algoritmos</title>
+  </head>
+  <body>
+    <h1>Estudo de algoritimos</h1>
 
-  <script src="scripts-algoritmos/testes.js"></script>
-
-</body>
+    <script src="scripts-algoritmos/testes.js"></script>
+  </body>
 </html>
