--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Estudo de algoritmos</title>
   </head>
   <body>
-    <h1>Estudo de algoritimos</h1>
-
+    <div class="pai">
+      <h1>Estudo de algoritmos</h1>
+    </div>
     <script src="scripts-algoritmos/testes.js"></script>
   </body>
 </html>
